# DallE

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  pyproject.toml  steup.py  vcpkg.json
.github/workflows/: doxygen.yml
Modern_Robotics_Py/: DynamicsTraj.py  ForwardDynamics.py  ForwardKinematics.py  IK_MPC.py  InverseDynamics.py  Jacobian.py  Tools.py  main.py
arm_7dof/src/robot_commander_cpp/: ik_target_generator.cpp
docs/: Doxyfile  api-manual.md  user-manual.md
docs/plans/: 2026-02-08-mpc-ik-design.md  2026-02-08-mpc-ik-implementation.md
include/DallE/: ik.h
include/WallE/: dynamics.h  fk.h  ik.h  robot_control.h  tools.h
include/my_modern_robotics/: dynamics.h  fk.h  ik.h  inverse_dynamics.h  robot_control.h  tools.h  trajectory.h
quadruped/src/robot_commander_cpp/: ik_long_generator.cpp
src/: dynamics.cpp  fk.cpp  ik.cpp  inverse_dynamics.cpp  motion_planning.cpp  robot_control.cpp  tools.cpp  trajectory.cpp
tests/: api_smoke_test.cpp  dynamics_test.cpp  fk_test.cpp  ik_test.cpp  inverse_dynamics_test.cpp  motion_planning_test.cpp  robot_control_test.cpp  tools_basic_test.cpp  tools_jacobian_test.cpp  tools_transform_test.cpp  trajectory_test.cpp
wallE/include/WallE/: inverse_dynamics.h  motion_planning.h  trajectory.h
wallE/src/: tools.cpp
xarm7/src/robot_commander_cpp/: ik_target_generator.cpp  inverse_kinematics_mpc.cpp
