[project]
name = "modern-robotics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cvxopt>=1.3.2",
    "numpy>=2.4.2",
    "qpsolvers>=4.8.2",
    "scipy>=1.17.0",
    "pytest>=8.0.0",
    "mujoco>=3.0.0",
    "matplotlib>=3.10.8",
    "setuptools>=82.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "mujoco>=3.0.0",
    "qpsolvers>=4.8.2",
    "cvxopt>=1.3.2",
]
